frame/support/test/tests/construct_runtime_ui/undefined_genesis_config_part.stderr
error: `Pallet` does not have #[pallet::genesis_config] defined, perhaps you should remove `Config` from construct_runtime?
  --> tests/construct_runtime_ui/undefined_genesis_config_part.rs:5:1
   |
5  |   #[frame_support::pallet]
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
...
49 | / construct_runtime! {
50 | |     pub struct Runtime
51 | |     {
52 | |         System: frame_system::{Pallet, Call, Storage, Config, Event<T>},
53 | |         Pallet: pallet::{Pallet, Config},
54 | |     }
55 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `pallet::__substrate_genesis_config_check::is_genesis_config_defined` which comes from the expansion of the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0437]: type `BlockNumber` is not a member of trait `frame_system::Config`
  --> tests/construct_runtime_ui/undefined_genesis_config_part.rs:26:2
   |
26 |     type BlockNumber = u32;
   |     ^^^^^^^^^^^^^^^^^^^^^^^ not a member of trait `frame_system::Config`

error[E0412]: cannot find type `GenesisConfig` in module `pallet`
  --> tests/construct_runtime_ui/undefined_genesis_config_part.rs:49:1
   |
49 | / construct_runtime! {
50 | |     pub struct Runtime
51 | |     {
52 | |         System: frame_system::{Pallet, Call, Storage, Config, Event<T>},
53 | |         Pallet: pallet::{Pallet, Config},
54 | |     }
55 | | }
   | |_^ not found in `pallet`
   |
   = note: this error originates in the macro `construct_runtime` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider importing one of these items
   |
1  + use frame_system::GenesisConfig;
   |
1  + use test_pallet::GenesisConfig;
   |
